Set CSS overflow-wrap to fix long user/server names overflowing page

--- a/static/styles.css
+++ b/static/styles.css
@@ -1,3 +1,7 @@
+body {
+    overflow-wrap: break-word;
+}
+
 td, th {
   border: 1px solid #999;
   padding: 0.5rem;
